--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "@hono/node-server": "^1.12.0",
-    "dedent": "^1.5.3",
-    "dotenv": "^16.4.5",
-    "hono": "^4.5.0",
-    "openai": "^4.52.7",
-    "prettier": "^3.3.3"
+    "@hono/node-server": "^1.17.0",
+    "@types/bun": "^1.2.18",
+    "dedent": "^1.6.0",
+    "dotenv": "^17.2.0",
+    "hono": "^4.8.5",
+    "openai": "^5.10.1",
+    "prettier": "^3.6.2"
   },
   "engines": {
     "node": ">= 18.0.0",
