--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
   "name": "gpt-grammarly",
-  "version": "1.0.1",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "license": "AGPL-version-3.0",
-  "private": false,
+  "version": "2.0.0",
+  "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "bun --watch index.ts"
   },
   "dependencies": {
-    "@hono/node-server": "^1.17.0",
-    "@types/bun": "^1.2.18",
     "dedent": "^1.6.0",
-    "dotenv": "^17.2.0",
-    "hono": "^4.8.5",
     "openai": "^5.10.1",
     "prettier": "^3.6.2"
   },
-  "engines": {
-    "node": ">= 18.0.0",
-    "npm": ">= 6.0.0"
-  },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@types/bun": "^1.2.18"
   }
 }
